--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -91,7 +91,7 @@ jobs:
           sudo apt-get clean
           sudo rm -rf /usr/local
 
-      - name: Extract vendor and vendor_dlkm partition
+      - name: Extract vendor partition
         if: env.need_update == 1
         run: |
           tar xvf ${{ env.ap_tar }} super.img.lz4
@@ -100,12 +100,10 @@ jobs:
           simg2img super.img super_raw.img
           rm super.img
           mv super_raw.img super.img
-          python3 tools/bin/lpunpack.py -p vendor,vendor_dlkm super.img .
+          python3 tools/bin/lpunpack.py -p vendor super.img .
           rm super.img
           [[ -e vendor.img ]] && zip ${{ env.latest_shortversion }}_vendor.zip vendor.img
-          [[ -e vendor_dlkm.img ]] && zip ${{ env.latest_shortversion }}_vendor_dlkm.zip vendor_dlkm.img
           [[ -e vendor.img ]] && rm vendor.img
-          [[ -e vendor_dlkm.img ]] && rm vendor_dlkm.img
 
       - name: Update current version
         if: env.need_update == 1
@@ -139,4 +137,3 @@ jobs:
             ${{ env.cp_tar }}
             ${{ env.home_csc_tar }}
             ${{ env.latest_shortversion }}_vendor.zip
-            ${{ env.latest_shortversion }}_vendor_dlkm.zip
