--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -54,7 +54,6 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y liblz4-tool zip android-sdk-libsparse-utils f2fs-tools
           sudo wget -O /usr/bin/samfirm https://github.com/DavidArsene/samfirm.js/releases/download/v0.3.0/samfirm.js && sudo chmod +x /usr/bin/samfirm
-          wget https://dl.google.com/android/repository/platform-tools-latest-linux.zip && unzip platform-tools-latest-linux.zip
 
       - name: Fetch firmware
         if: env.need_update == 1
@@ -100,7 +99,7 @@ jobs:
           simg2img super.img super_raw.img
           rm super.img
           mv super_raw.img super.img
-          ./lpunpack -p vendor super.img .
+          ./bin/lpunpack -p vendor super.img .
           rm super.img
           [[ -e vendor.img ]] && zip ${{ env.latest_shortversion }}_vendor.zip vendor.img
 
