--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -109,7 +109,7 @@ jobs:
         run: |
            mkdir -p vendor/mount vendor/tee
            sudo mount vendor.img vendor/mount
-           cp -rfa vendor/mount/tee vendor/tee
+           cp -rfa vendor/mount/tee* vendor/tee
            cd vendor/tee
            zip -r0 --store ${{ env.latest_shortversion }}_tee.zip .
            mv ${{ env.latest_shortversion }}_tee.zip ../../
@@ -118,7 +118,7 @@ jobs:
         if: env.need_update == 1
         run: |
            mkdir -p vendor/firmware 
-           cp -rfa vendor/mount/firmware vendor/firmware
+           cp -rfa vendor/mount/firmware* vendor/firmware
            cd vendor/firmware
            zip -r0 --store ${{ env.latest_shortversion }}_firmware.zip .
            mv ${{ env.latest_shortversion }}_firmware.zip ../../
